<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enterMassBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/enterMassBox_layout_height"
        android:autofillHints=""
        android:backgroundTint="@color/this_nice_green_that_I_like"
        android:ems="10"
        android:hint="@string/enterMass_default_val"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/heightLid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massLid"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/massLid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/massLid_layout_marginTop"
        android:text="@string/Mass_window_description_kg"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heightLid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heightLid_layout_marginTop"
        android:text="@string/Height_window_description_cm"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massLid" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/count_button_layout_marginTop"
        android:backgroundTint="@color/this_nice_green_that_I_like"
        android:text="@string/count_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterHeightBox" />

    <EditText
        android:id="@+id/enterHeightBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/this_nice_green_that_I_like"
        android:ems="10"
        android:hint="@string/enterHeight_default_val"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightLid" />

    <TextView
        android:id="@+id/resultWindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title_when_ready"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countButton" />

    <TextView
        android:id="@+id/finalResultWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/result_Title_text_when_empty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultWindowTitle"
        app:layout_constraintVertical_bias="0.216" />

    <Switch
        android:id="@+id/metric_imperial_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textOff="@string/text_when_unit_switch_off"
        android:textOn="@string/text_when_unit_switch_on"
        android:thumbTint="@color/this_nice_green_that_I_like"
        app:layout_constraintBottom_toTopOf="@+id/enterMassBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/aboutTheAuthorBckBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/this_nice_green_that_I_like"
        android:foregroundTint="@color/this_nice_green_that_I_like"
        android:text="@string/about_the_author_button_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/this_nice_green_that_I_like" />

</androidx.constraintlayout.widget.ConstraintLayout>