...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/act_2_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="92dp"
        android:text="@string/result_Title_text_when_empty"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/BMIDescriptionTextView"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginBottom="32dp"
        android:text="@string/result_Title_text_when_empty"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
...
